adding stagger animations

--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "@tanstack/react-query": "^5.17.15",
     "clsx": "^2.1.0",
     "contentful": "^10.6.16",
-    "embla-carousel-react": "^8.0.0-rc19",
+    "framer-motion": "^11.0.3",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.49.3",
     "react-responsive": "^9.0.2",
     "tailwind-merge": "^2.2.1"
   },
